name:                BFS
version:             0.1.0
synopsis:            A (made-up forth-like language)-to-Brainfuck transpiler

license:             MIT
license-file:        LICENSE
author:              Antoine Leblanc
maintainer:          crucuny@gmail.com

category:            Language
build-type:          Simple

cabal-version:       >=1.10

data-files:          src/Prelude.bs

executable bfs
  main-is:           Main.hs
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
                     -fno-warn-type-defaults
                     -fno-warn-unused-do-bind
                     -fwarn-tabs
  other-modules:     Misc, Grammar, Diagnostics, Parser, Object, Compiler, Assembler, BuiltIn, Module, Optimizer
                     Paths_BFS
  build-depends:     base,
                     containers,
                     directory,
                     mtl,
                     transformers,
                     transformers-base,
                     parsec,
                     split,
                     filepath
