name:                BPP
version:             0.1.0
synopsis:            A BrainPlusPlus compiler

license:             MIT
license-file:        LICENSE
author:              Antoine Leblanc
maintainer:          crucuny@gmail.com

category:            Language
build-type:          Simple

cabal-version:       >=1.10

data-files:          src/Prelude.bs

executable bpp
  main-is:           Main.hs
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
                     -fno-warn-type-defaults
                     -fno-warn-unused-do-bind
                     -fwarn-tabs
  other-modules:     Types, Grammar, Object, Compiler, Assembler, BuiltIn, Paths_BPP
  build-depends:     base,
                     containers,
                     mtl,
                     transformers-base,
                     parsec,
                     split,
                     filepath
